--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   .eisenhower-container {
     text-align: center;
   }
-  
+
 }
 
 .tasks-container {
@@ -37,7 +37,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .wrapper {
@@ -138,7 +138,7 @@ button {
 }
 
 .selected {
-  width: 226px
+  width: 226px;
 }
 
 .del-icon {
@@ -159,12 +159,12 @@ button {
 
 /* Edit Task */
 .selected {
-  display: none
+  display: none;
 }
 
 .edit-mode .selected {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .fixed {
